# minecraft-bedrock-server

./: docker-compose.yml  pyproject.toml
actions/: start.sh  stop.sh
scripts/: backup.py  monitor.py  stop.py  utils.py
